src/objects/pdb_trip__x.object
<CustomObject>
    <fields>
        <fullName>f_retail_le_cash_tt__c</fullName>
        <description>f_retail_le_cash_tt</description>
        <externalDeveloperName>f_retail_le_cash_tt</externalDeveloperName>
        <label>f_retail_le_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_le_comp_rev__c</fullName>
        <description>f_retail_le_comp_rev</description>
        <externalDeveloperName>f_retail_le_comp_rev</externalDeveloperName>
        <label>f_retail_le_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_le_comp_tt__c</fullName>
        <description>f_retail_le_comp_tt</description>
        <externalDeveloperName>f_retail_le_comp_tt</externalDeveloperName>
        <label>f_retail_le_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_owned_actual_profit__c</fullName>
        <description>f_retail_owned_actual_profit</description>
        <externalDeveloperName>f_retail_owned_actual_profit</externalDeveloperName>
        <label>f_retail_owned_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_owned_avg_profit__c</fullName>
        <description>f_retail_owned_avg_profit</description>
        <externalDeveloperName>f_retail_owned_avg_profit</externalDeveloperName>
        <label>f_retail_owned_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_owned_cash_rev__c</fullName>
        <description>f_retail_owned_cash_rev</description>
        <externalDeveloperName>f_retail_owned_cash_rev</externalDeveloperName>
        <label>f_retail_owned_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_owned_cash_tt__c</fullName>
        <description>f_retail_owned_cash_tt</description>
        <externalDeveloperName>f_retail_owned_cash_tt</externalDeveloperName>
        <label>f_retail_owned_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_owned_comp_rev__c</fullName>
        <description>f_retail_owned_comp_rev</description>
        <externalDeveloperName>f_retail_owned_comp_rev</externalDeveloperName>
        <label>f_retail_owned_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_retail_owned_comp_tt__c</fullName>
        <description>f_retail_owned_comp_tt</description>
        <externalDeveloperName>f_retail_owned_comp_tt</externalDeveloperName>
        <label>f_retail_owned_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_actual_profit__c</fullName>
        <description>f_room_actual_profit</description>
        <externalDeveloperName>f_room_actual_profit</externalDeveloperName>
        <label>f_room_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_avg_profit__c</fullName>
        <description>f_room_avg_profit</description>
        <externalDeveloperName>f_room_avg_profit</externalDeveloperName>
        <label>f_room_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_cash_rev__c</fullName>
        <description>f_room_cash_rev</description>
        <externalDeveloperName>f_room_cash_rev</externalDeveloperName>
        <label>f_room_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_cash_tt__c</fullName>
        <description>f_room_cash_tt</description>
        <externalDeveloperName>f_room_cash_tt</externalDeveloperName>
        <label>f_room_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_chrg_amt__c</fullName>
        <description>f_room_chrg_amt</description>
        <externalDeveloperName>f_room_chrg_amt</externalDeveloperName>
        <label>f_room_chrg_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_comp_amt__c</fullName>
        <description>f_room_comp_amt</description>
        <externalDeveloperName>f_room_comp_amt</externalDeveloperName>
        <label>f_room_comp_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_comp_rev__c</fullName>
        <description>f_room_comp_rev</description>
        <externalDeveloperName>f_room_comp_rev</externalDeveloperName>
        <label>f_room_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_comp_tt__c</fullName>
        <description>f_room_comp_tt</description>
        <externalDeveloperName>f_room_comp_tt</externalDeveloperName>
        <label>f_room_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_rev__c</fullName>
        <description>f_room_rev</description>
        <externalDeveloperName>f_room_rev</externalDeveloperName>
        <label>f_room_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_service_charge_amt__c</fullName>
        <description>f_service_charge_amt</description>
        <externalDeveloperName>f_service_charge_amt</externalDeveloperName>
        <label>f_service_charge_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_spa_actual_profit__c</fullName>
        <description>f_spa_actual_profit</description>
        <externalDeveloperName>f_spa_actual_profit</externalDeveloperName>
        <label>f_spa_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_spa_avg_profit__c</fullName>
        <description>f_spa_avg_profit</description>
        <externalDeveloperName>f_spa_avg_profit</externalDeveloperName>
        <label>f_spa_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_spa_cash_rev__c</fullName>
        <description>f_spa_cash_rev</description>
        <externalDeveloperName>f_spa_cash_rev</externalDeveloperName>
        <label>f_spa_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_spa_cash_tt__c</fullName>
        <description>f_spa_cash_tt</description>
        <externalDeveloperName>f_spa_cash_tt</externalDeveloperName>
        <label>f_spa_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_spa_comp_rev__c</fullName>
        <description>f_spa_comp_rev</description>
        <externalDeveloperName>f_spa_comp_rev</externalDeveloperName>
        <label>f_spa_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_spa_comp_tt__c</fullName>
        <description>f_spa_comp_tt</description>
        <externalDeveloperName>f_spa_comp_tt</externalDeveloperName>
        <label>f_spa_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_tax_amt__c</fullName>
        <description>f_tax_amt</description>
        <externalDeveloperName>f_tax_amt</externalDeveloperName>
        <label>f_tax_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_tax_discount_oth_amt__c</fullName>
        <description>f_tax_discount_oth_amt</description>
        <externalDeveloperName>f_tax_discount_oth_amt</externalDeveloperName>
        <label>f_tax_discount_oth_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_all__c</fullName>
        <description>f_theo_all</description>
        <externalDeveloperName>f_theo_all</externalDeveloperName>
        <label>f_theo_all</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_game__c</fullName>
        <description>f_theo_game</description>
        <externalDeveloperName>f_theo_game</externalDeveloperName>
        <label>f_theo_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_oth__c</fullName>
        <description>f_theo_oth</description>
        <externalDeveloperName>f_theo_oth</externalDeveloperName>
        <label>f_theo_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_slot__c</fullName>
        <description>f_theo_slot</description>
        <externalDeveloperName>f_theo_slot</externalDeveloperName>
        <label>f_theo_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_total_comp_amount__c</fullName>
        <description>f_total_comp_amount</description>
        <externalDeveloperName>f_total_comp_amount</externalDeveloperName>
        <label>f_total_comp_amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_total_item_amt__c</fullName>
        <description>f_total_item_amt</description>
        <externalDeveloperName>f_total_item_amt</externalDeveloperName>
        <label>f_total_item_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_total_payment_amt__c</fullName>
        <description>f_total_payment_amt</description>
        <externalDeveloperName>f_total_payment_amt</externalDeveloperName>
        <label>f_total_payment_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_trans_amt__c</fullName>
        <description>f_trans_amt</description>
        <externalDeveloperName>f_trans_amt</externalDeveloperName>
        <label>f_trans_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_transport_actual_profit__c</fullName>
        <description>f_transport_actual_profit</description>
        <externalDeveloperName>f_transport_actual_profit</externalDeveloperName>
        <label>f_transport_actual_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_transport_avg_profit__c</fullName>
        <description>f_transport_avg_profit</description>
        <externalDeveloperName>f_transport_avg_profit</externalDeveloperName>
        <label>f_transport_avg_profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_transport_cash_rev__c</fullName>
        <description>f_transport_cash_rev</description>
        <externalDeveloperName>f_transport_cash_rev</externalDeveloperName>
        <label>f_transport_cash_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_transport_cash_tt__c</fullName>
        <description>f_transport_cash_tt</description>
        <externalDeveloperName>f_transport_cash_tt</externalDeveloperName>
        <label>f_transport_cash_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_transport_comp_rev__c</fullName>
        <description>f_transport_comp_rev</description>
        <externalDeveloperName>f_transport_comp_rev</externalDeveloperName>
        <label>f_transport_comp_rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_transport_comp_tt__c</fullName>
        <description>f_transport_comp_tt</description>
        <externalDeveloperName>f_transport_comp_tt</externalDeveloperName>
        <label>f_transport_comp_tt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_wine_amt__c</fullName>
        <description>f_wine_amt</description>
        <externalDeveloperName>f_wine_amt</externalDeveloperName>
        <label>f_wine_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_avgbet_div_game__c</fullName>
        <description>i_avgbet_div_game</description>
        <externalDeveloperName>i_avgbet_div_game</externalDeveloperName>
        <label>i_avgbet_div_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_avgbet_div_oth__c</fullName>
        <description>i_avgbet_div_oth</description>
        <externalDeveloperName>i_avgbet_div_oth</externalDeveloperName>
        <label>i_avgbet_div_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_avgbet_div_slot__c</fullName>
        <description>i_avgbet_div_slot</description>
        <externalDeveloperName>i_avgbet_div_slot</externalDeveloperName>
        <label>i_avgbet_div_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_brand_trip_nbr__c</fullName>
        <description>i_brand_trip_nbr</description>
        <externalDeveloperName>i_brand_trip_nbr</externalDeveloperName>
        <label>i_brand_trip_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_comped_trip__c</fullName>
        <description>i_comped_trip</description>
        <externalDeveloperName>i_comped_trip</externalDeveloperName>
        <label>i_comped_trip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_covers__c</fullName>
        <description>i_covers</description>
        <externalDeveloperName>i_covers</externalDeveloperName>
        <label>i_covers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_events__c</fullName>
        <description>i_events</description>
        <externalDeveloperName>i_events</externalDeveloperName>
        <label>i_events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_len_of_play_game__c</fullName>
        <description>i_len_of_play_game</description>
        <externalDeveloperName>i_len_of_play_game</externalDeveloperName>
        <label>i_len_of_play_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_len_of_play_oth__c</fullName>
        <description>i_len_of_play_oth</description>
        <externalDeveloperName>i_len_of_play_oth</externalDeveloperName>
        <label>i_len_of_play_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_len_of_play_slot__c</fullName>
        <description>i_len_of_play_slot</description>
        <externalDeveloperName>i_len_of_play_slot</externalDeveloperName>
        <label>i_len_of_play_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_line_item_qty__c</fullName>
        <description>i_line_item_qty</description>
        <externalDeveloperName>i_line_item_qty</externalDeveloperName>
        <label>i_line_item_qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_cms_trips__c</fullName>
        <description>i_nbr_cms_trips</description>
        <externalDeveloperName>i_nbr_cms_trips</externalDeveloperName>
        <label>i_nbr_cms_trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_cons_rev_days__c</fullName>
        <description>i_nbr_cons_rev_days</description>
        <externalDeveloperName>i_nbr_cons_rev_days</externalDeveloperName>
        <label>i_nbr_cons_rev_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_days__c</fullName>
        <description>i_nbr_days</description>
        <externalDeveloperName>i_nbr_days</externalDeveloperName>
        <label>i_nbr_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_line_item__c</fullName>
        <description>i_nbr_line_item</description>
        <externalDeveloperName>i_nbr_line_item</externalDeveloperName>
        <label>i_nbr_line_item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_occupants__c</fullName>
        <description>i_nbr_occupants</description>
        <externalDeveloperName>i_nbr_occupants</externalDeveloperName>
        <label>i_nbr_occupants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_offers_red__c</fullName>
        <description>i_nbr_offers_red</description>
        <externalDeveloperName>i_nbr_offers_red</externalDeveloperName>
        <label>i_nbr_offers_red</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_offers_unred__c</fullName>
        <description>i_nbr_offers_unred</description>
        <externalDeveloperName>i_nbr_offers_unred</externalDeveloperName>
        <label>i_nbr_offers_unred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_pos_days__c</fullName>
        <description>i_nbr_pos_days</description>
        <externalDeveloperName>i_nbr_pos_days</externalDeveloperName>
        <label>i_nbr_pos_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_rev_centers__c</fullName>
        <description>i_nbr_rev_centers</description>
        <externalDeveloperName>i_nbr_rev_centers</externalDeveloperName>
        <label>i_nbr_rev_centers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_rooms__c</fullName>
        <description>i_nbr_rooms</description>
        <externalDeveloperName>i_nbr_rooms</externalDeveloperName>
        <label>i_nbr_rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_trans__c</fullName>
        <description>i_nbr_trans</description>
        <externalDeveloperName>i_nbr_trans</externalDeveloperName>
        <label>i_nbr_trans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_trip_game__c</fullName>
        <description>i_nbr_trip_game</description>
        <externalDeveloperName>i_nbr_trip_game</externalDeveloperName>
        <label>i_nbr_trip_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_trip_oth__c</fullName>
        <description>i_nbr_trip_oth</description>
        <externalDeveloperName>i_nbr_trip_oth</externalDeveloperName>
        <label>i_nbr_trip_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_nbr_trip_slot__c</fullName>
        <description>i_nbr_trip_slot</description>
        <externalDeveloperName>i_nbr_trip_slot</externalDeveloperName>
        <label>i_nbr_trip_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_pdb_trip_id__c</fullName>
        <description>i_pdb_trip_id</description>
        <externalDeveloperName>i_pdb_trip_id</externalDeveloperName>
        <label>i_pdb_trip_id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_rated_days__c</fullName>
        <description>i_rated_days</description>
        <externalDeveloperName>i_rated_days</externalDeveloperName>
        <label>i_rated_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rated_trips__c</fullName>
        <description>i_rated_trips</description>
        <externalDeveloperName>i_rated_trips</externalDeveloperName>
        <label>i_rated_trips</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rm_night__c</fullName>
        <description>i_rm_night</description>
        <externalDeveloperName>i_rm_night</externalDeveloperName>
        <label>i_rm_night</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_stay__c</fullName>
        <description>i_stay</description>
        <externalDeveloperName>i_stay</externalDeveloperName>
        <label>i_stay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_trip_nbr__c</fullName>
        <description>i_trip_nbr</description>
        <externalDeveloperName>i_trip_nbr</externalDeveloperName>
        <label>i_trip_nbr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>week_code_fk__c</fullName>
        <description>week_code_fk</description>
        <externalDeveloperName>week_code_fk</externalDeveloperName>
        <label>week_code_fk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>caesars$pdb_trip</label>
    <pluralLabel>caesars$pdb_trip</pluralLabel>
</CustomObject>